--- a/VRChat/10/997510.html
+++ b/VRChat/10/997510.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "RiYraO3J6eUM0DzVEF2bokm6tyDg10njPtmVcWmcgOA="></script>
+    "7wBxcEVH+OBkDFpkTnj9zxx6uQ3bl+ExTt5fTAnP8Jw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"OculusGoでVRChatをしたお話","description":"＝＝＝＝＝＝＝【注意】＝＝＝＝＝＝＝＝＝＝＝\n・ブログに書いてあるものと内容はほぼ同じです。\n・やろうとしてできなかった人向けです。\n・非常に薄い内容。\n・マッハ新書？　技術書？\n・初出品\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\n【内容】\nOculusGoでVRChatをしたい人向けのモノです。\n自身の失敗と解決法が書いてます。\n\n550文字前後\n","url":"https://booth.pm/ja/items/997510","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d23f9e65-f92e-4097-a89c-7e4c1b80cd5b/i/997510/4e0d4c06-0866-45fc-a0e0-4a62378a9455_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RiYraO3J6eUM0DzVEF2bokm6tyDg10njPtmVcWmcgOA="></script>
+    nonce="7wBxcEVH+OBkDFpkTnj9zxx6uQ3bl+ExTt5fTAnP8Jw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +156,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/997510/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
@@ -169,14 +171,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/997510/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               14
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
