--- a/VRChat/63/997163.html
+++ b/VRChat/63/997163.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "2SNUc8zjBbCyTbZjAKRhX2Nt1ZZRUc0KfD5It7VODGo="></script>
+    "YsRv8jIMYmS3sJm+RAZDpR+klKCjyVSs6A+mqkdeU5M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【YK's Atelier】反省首掛け","description":"前日にお酒に酔ってやらかしてしまった、申し訳ないことをしてしまったななどの時におすすめです。（実際私も使いました。）\n文字の変更はペイントツールなどでPSDファイルを開くことで可能です。\n\nVRChatアバターへの装飾を想定して作られております。\n\n収益化された動画への出演、映り込みなどOKです。\n\n色の変更は可能です。ご自分のお好きな色にカスタムしてください。\nテクスチャはPSDファイルで保存されております。\nレイヤーが分けられているので、色変更はやりやすいと思います。\n\n主にVRChatでの利用を想定しておりますが、他用途での利用も可能です。\n\n内容物：反省首掛け.fbx\n　　　　反省首掛け.psd\n\nモデルポリゴン数：38△\n\nマテリアル：1つ\n\n禁止事項：再配布、転売、自作発言","url":"https://booth.pm/ja/items/997163","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/20fcfc8e-a688-49a2-95b4-807f9553d59d/i/997163/ae8df437-9822-456e-a5b0-daab363b7bb7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="2SNUc8zjBbCyTbZjAKRhX2Nt1ZZRUc0KfD5It7VODGo="></script>
+    nonce="YsRv8jIMYmS3sJm+RAZDpR+klKCjyVSs6A+mqkdeU5M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/997163/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               132
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/997163/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               132
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
