--- a/VRChat/08/996508.html
+++ b/VRChat/08/996508.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "OfPH3XA5HRzQo0jGhaMCJ3YqiioH2FYTqCoPmpJ9u8Q="></script>
+    "j84u/xAehsnHiRYrSWlVyv2sUBjOaeOlqDwhZlI0uN0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向けモデル【つよいインコ Ver1.1】","description":"VRChat向け3Dモデル【つよいインコ】です。\nポリゴン数は19030です。\nVRchatでの使用を想定して販売していますが、ゲームや配信、商用利用等にも使えます。\n二次配布は改変したものも含め禁止です。（VRCのアバターペデスタル含む）\n\n内容\n・unitypackage(モデルデータ（FBXとPNG）とprefabデータ)\n・モデルデータ（FBX）\n・テクスチャ（旧Verと新Ver）(PNG)\n\n連絡先\n@jimtugy（Twitter）\n\n【更新内容】\n2018/9/13 ノーマルマップが追加され、筋肉量が増加しました。\n\n\nIt is a 3D model for VRChat [Strong Parakeet].\nThe number of polygons is 19030.\nAlthough it sells it assuming use with VRchat, it can also be used for games, distribution, commercial use etc.\nSecondary distribution is prohibited, including those modified. (Including avatar pedestal of VRC)\n\nContents\n· Unitypackage (model data (FBX and PNG) and prefab data)\n· Model data (FBX)\n· Texture (old Ver and new Ver) (PNG)\n\ncontact information\n@ jimtugy (Twitter)\n\n【Update contents】\n2018/9/13 Normal map was added, muscle mass increased.","url":"https://booth.pm/ja/items/996508","offers":{"priceCurrency":"JPY","@type":"Offer","price":"700"},"image":"https://booth.pximg.net/c/620x620/472e2c7e-f67e-4208-a492-0fe806b258e0/i/996508/11e6de9f-7b9d-44ba-b220-096cc1174dba_base_resized.jpg"}
     </script>
@@ -85,16 +85,13 @@
     "https://asset.booth.pm/favicon.ico">
     <link href="/static-images/pwa/icon_size_180.png" rel=
     "apple-touch-icon-precomposed">
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <noscript><iframe height="0" src=
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OfPH3XA5HRzQo0jGhaMCJ3YqiioH2FYTqCoPmpJ9u8Q="></script>
+    nonce="j84u/xAehsnHiRYrSWlVyv2sUBjOaeOlqDwhZlI0uN0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -118,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -132,7 +131,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -173,10 +173,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/996508/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              83
+                              84
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -188,14 +188,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/996508/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              83
+                              84
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
