--- a/VRChat/05/992305.html
+++ b/VRChat/05/992305.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "1uN7B4hmhbM9JtBlRknwef+ucT0iB9J586/dhmBY3lU="></script>
+    "x3PTCnysqiIyM82dad3Nq/XzthytnRDYyq9xnApLXLA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"紙のようせいさん","description":"ペーパークラフト風の妖精さんです。\n\n本モデルはアクセサリとしての使用を想定してあり、ポーズが固定のため単体でアバターとして使うには不向きです。\n\nパーティクルで羽から粒子がこぼれ落ち、さらに羽を動かしながら上下するアニメーションを付けてあります。\n\n使用に関しては特に禁止事項を設けていません。\n購入後はご自由にお使いください。","url":"https://booth.pm/ja/items/992305","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/1e917239-eb4f-44e6-8fa0-efcfc40c090b/i/992305/e410f160-b4c2-4173-b44f-45f68e6da004_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1uN7B4hmhbM9JtBlRknwef+ucT0iB9J586/dhmBY3lU="></script>
+    nonce="x3PTCnysqiIyM82dad3Nq/XzthytnRDYyq9xnApLXLA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/992305/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/992305/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
